--- a/bin/meson.build
+++ b/bin/meson.build
@@ -8,6 +8,7 @@ conf.set('PYTHON', python.find_installation('python3').path())
 conf.set('VERSION', meson.project_version())
 conf.set('localedir', join_paths(get_option('prefix'), get_option('localedir')))
 conf.set('pkgdatadir', pkgdatadir)
+conf.set('PROFILE', profile)
 
 configure_file(
   input: 'todopatamus.in',
