--- a/bin/todopatamus.in
+++ b/bin/todopatamus.in
@@ -33,6 +33,7 @@ import gettext
 VERSION = '@VERSION@'
 pkgdatadir = '@pkgdatadir@'
 localedir = '@localedir@'
+PROFILE = '@PROFILE@'
 
 sys.path.insert(1, pkgdatadir)
 signal.signal(signal.SIGINT, signal.SIG_DFL)
@@ -48,4 +49,4 @@ if __name__ == '__main__':
     resource._register()
 
     from todopatamus import main
-    sys.exit(main.main(VERSION))
+    sys.exit(main.main(VERSION, PROFILE))
