Add TodoEntry and put_task feature

--- a/data/meson.build
+++ b/data/meson.build
@@ -4,6 +4,7 @@ blueprints = custom_target('blueprints',
     'ui/help-overlay.blp',
     'ui/todos-column.blp',
     'ui/todo-listitem.blp',
+    'ui/todo-entry.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
