--- a/data/meson.build
+++ b/data/meson.build
@@ -5,6 +5,7 @@ blueprints = custom_target('blueprints',
     'ui/todos-column.blp',
     'ui/todo-listitem.blp',
     'ui/todo-entry.blp',
+    'ui/sidebar-column.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
