Add Todo editing

--- a/data/meson.build
+++ b/data/meson.build
@@ -5,6 +5,8 @@ blueprints = custom_target('blueprints',
     'ui/todos-column.blp',
     'ui/todo-listitem.blp',
     'ui/todo-entry.blp',
+    'ui/todo-details.blp',
+    'ui/todo-details-dialog.blp',
     'ui/sidebar-column.blp',
   ),
   output: '.',
